--- a/services.html
+++ b/services.html
@@ -63,13 +63,13 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Make A Referral</a>
+                                <a class="nav-link" href="make-a-referral.html">Make A Referral</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gallery</a>
+                                <a class="nav-link" href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Feedback</a>
+                                <a class="nav-link" href="contact-us.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
