--- a/services-details.html
+++ b/services-details.html
@@ -195,70 +195,9 @@
             </div>
         </div>
     </div>    
-    <div class="footer-section-wrapper top-bottom-space space-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer-logo"><a href="index.html"><img src="images/yourbetter.png" class="img-fluid"></a></div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer-content">
-                        <div class="footer-title">
-                            <h3><a href="tel:+61 466 355 650">+61 466 355 650</a></h3>
-                        </div>
-                        <p><a href="mailto:info@yourbettercare.com.au">info@yourbettercare.com.au</a></p>
-                        <h6>Office Hours</h6>
-                        <p>Mon to Fri<br>
-                        09:00 AM - 05:00 PM</p>
-                        <div class="tw-seven"><img src="images/247.png" class="img-fluid"></div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer-content">
-                        <div class="footer-title">
-                            <h3>Address</h3>
-                        </div>
-                        <h6>Your Better Care</h6>
-                        <p>Melbourne, Victoria,<br> Australia</p>
-                        <div class="footer-logos">
-                            <div class="tw-seven"><img src="images/ndis.png" class="img-fluid"></div>
-                            <div class="tw-seven"><img src="images/flags.png" class="img-fluid"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer-content footer-links">
-                        <div class="footer-title">
-                            <h3>Navigation</h3>
-                        </div>
-                        <p><a href="about.html">About</a></p>
-                        <p><a href="#">NDIS</a></p>
-                        <p><a href="services.html">Services</a></p>
-                        <p><a href="#">Make A Referral</a></p>
-                        <p><a href="#">Gallery</a></p>
-                        <p><a href="#">Feedback</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-7"><p>Copyright © 2024 Your Better Care Community Service. All Rights Reserved.</p></div>
-                <div class="col-md-5">
-                <div class="footer-links">
-                    <ul>
-                        <li class="firstlink"><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                    </ul>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <footer>
-        
+        <div include-html="footer.html"  id="footer-file"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
             integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
@@ -266,6 +205,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+        <script src="js/include-html.min.js"></script>
         <script>
             $(document).ready(function(){
                 $('.owl-one').owlCarousel({
