--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
                 <div class="col-lg-6 col-md-6 no-padding">
                     <div class="phone-contact">
                         <div class="phone-link">
-                            <a href="#"><i class="bi bi-headset"></i> +61 466 355 650</a>
+                            <a href="tel:+61 466 355 650"><i class="bi bi-headset"></i> +61 466 355 650</a>
                         </div>
                         <div class="contact-us-link">
                             <a href="contact-us.html">Contact us</a>
